[project]
name = "odis"
version = "0.1.0"
description = "Python framework for optimizing multi-energy systems."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Ramiro Criach", email = "ramirocriach@gmail.com" }]
keywords = ["python"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "highspy>=1.11.0",
  "linopy>=0.5.5",
  "numpy>=1.26.4",
  "pandas>=2.3.1",
  "pydantic>=2.12.5",
  "rich>=14.0.0",
  "xarray>=2025.6.1",
]

[project.urls]
Documentation = "https://ramirorcr.github.io/odis/"
Homepage = "https://ramirorcr.github.io/odis/"
Repository = "https://github.com/ramirorcr/odis"

[dependency-groups]
dev = [
  "deptry>=0.23.1",
  "nox>=2025.5.1",
  "pre-commit>=4.3.0",
  "pyright>=1.1.406",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-xdist>=3.8.0",
  "radon>=6.0.1",
  "ruff>=0.14.7",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-material>=9.6.16",
  "mkdocstrings-python>=1.16.12",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "odis"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "TD",
  "FIX",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "INP001",  # Checks for packages that are missing an __init__.py
  "S101",  # Use of 'assert' detected
  "D",  # Check for missing docstrings
  "F811",  # Redefinition of unsuded variables
]
"experiments/**" = [
  "INP001",  # Checks for packages that are missing an __init__.py
  "S101",  # Use of 'assert' detected
  "D",  # Check for missing docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[tool.pyright]
typeCheckingMode = "standard"

[tool.deptry.per_rule_ignores]
DEP002 = ["highspy"]

[tool.coverage.report]
skip_empty = true
fail_under = 90

[tool.coverage.run]
branch = true
source = ["src"]

[tool.vulture]
# make_whitelist = true
min_confidence = 80
paths = ["src/"]
