[project]
name = "odys"
version = "0.1.1"
description = "Python framework for optimizing multi-energy systems."
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "Ramiro Criach", email = "ramirocriach@gmail.com" }]
keywords = ["python"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "highspy>=1.12.0",
  "linopy==0.6.3",
  "numpy>=2.4.1",
  "pandas>=2.3.3",
  "pydantic>=2.12.5",
  "xarray>=2025.12.0",
]

[project.urls]
Documentation = "https://ramirocrc.github.io/odys/"
Homepage = "https://ramirocrc.github.io/odys/"
Repository = "https://github.com/ramirocrc/odys"

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "nox>=2025.5.12",
  "prek>=0.2.30",
  "pyrefly>=0.49.0",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "radon>=6.0.1",
  "rich>=14.2.0",
  "ruff>=0.14.13",
  "ty>=0.0.12",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-material>=9.7.1",
  "mkdocstrings-python>=2.0.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "odys"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "TD",
  "FIX",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "INP001",  # Checks for packages that are missing an __init__.py
  "S101",  # Use of 'assert' detected
  "D",  # Check for missing docstrings
  "F811",  # Redefinition of unsuded variables
]
"examples/**" = [
  "INP001",  # Checks for packages that are missing an __init__.py
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[tool.deptry.per_rule_ignores]
DEP002 = ["highspy"]
DEP004 = ["rich"]

[tool.coverage.report]
skip_empty = true
fail_under = 90

[tool.coverage.run]
branch = true
source = ["src"]

[tool.vulture]
min_confidence = 80
paths = ["src/"]

[tool.pyrefly]
infer-with-first-use = false
